# glpractice

./: CMakeLists.txt  README.md  deps-CMakeLists.txt
include/: CMakeLists.txt  gl_includes.h
res/: metaball.frag
src/: CMakeLists.txt  main.cpp
